bynkc/tests/fixtures/negative/134_integration_too_few_participants/src/it.bynk
suite integration "x" {
  wires app.a
  case "t" { let r <- app.a.ping() expect r == 1 }
}
